fix: align search and theme toggle buttons using flexbox

--- a/src/assets/css/_navbar.scss
+++ b/src/assets/css/_navbar.scss
@@ -53,4 +53,8 @@
             background-color: var(--background-hover);
         }
     }
+
+    &__search {
+        display: flex;
+    }
 }
